# Crime_Data_Analysis

./: .~lock.Crime_Data_from_2020_to_Present.csv#  Crime_Data_from_2020_to_Present.csv  README.md  pyproject.toml
Crime_Analysis_Package/: Data_Summary.py  The_EDA.py  The_Inference.py  setup.py
src/Crime_Analysis_Package/: __main__.py  data_summary.py  the_eda.py  the_inference.py
src/crime_data_analysis/: __main__.py  data_summary.py  the_eda.py  the_inference.py
