[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crime_data"
authors = [
    {name = "aquib hussain"}
]
description = "crime data"
readme = "README.md"
keywords = ["data visualization", "crime", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "seaborn>=0.13.0"
]
version="2.0"

[project.urls]
Repository = "https://github.com/Aquibgitt/Crime_Data_Analysis"


[tool.setuptools.packages.find]
where = ["src"]